# odsynth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readme.rst  requirements.txt  setup-config.toml  setup.py  setup_config.toml  setup_utils.py  tox.ini
.github/workflows/: release-pipeline.yml  review-pipeline.yml  sonar_analysis.yml
docs/: conf.py  core_idea.md  core_idea.rst  formatters.rst  index.rst  plugins.rst  requirements.txt  writers.rst
odsynth/: data_generator.py  generator.py  globals.py  main.py  plugins_loader.py  provider_factory.py  publisher.py  schema.py  synth.py
odsynth/core/: __init__.py  core.py  object_model.py
odsynth/demos/: generate_data.py  publish.py  publish_json.py  publish_xml.py
odsynth/entry_points/: demo.py  json_publisher.py  publish.py  synth.py
odsynth/formatters/: __factory.py  __init__.py  abstract_formatter.py  base_formatter.py  delimited_text_formatter.py  exceptions.py  json_formatter.py  pandas_formatter.py  xml_formatter.py
odsynth/providers/: __factory.py  __init__.py  faker.py  random_int.py  simple_text.py  ssn.py
odsynth/publishers/: base_publisher.py  json_publisher.py
odsynth/transformers/: __factory.py  __init__.py  abstract_transformer.py  base_transformer.py  json_transformer.py  pandas_transformer.py  xml_transformer.py
odsynth/writers/: __factory.py  __init__.py  abstract_writer.py  disc_writer.py  exceptions.py  json_to_disc_writer.py  xml_to_disc_writer.py
sample_home_folder/providers/: ssn.py
sample_schema/: flat_schema.yaml  schema.yaml  schema_plural.yaml
sample_user_plugins/: ssn.py
src/: loader.py  main.py  setup.py  utils.py
src/data_generator/: __init__.py  factory.py  synth.py
src/data_generator/builder/: __init__.py  data_generator.py
src/data_generator/core/: __init__.py  core.py
src/data_generator/primitives/: factory.py
src/data_generator/primitives/providers/: random_int.py  simple_text.py
src/data_generator/provider_plugins/: random_int.py
src/data_generator/providers/: __init__.py  random_int.py  simple_text.py
