[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odsynth"
version = "0.0.4"
dependencies = [
  "faker==26.0.0",
  "typer==0.12.3",
  "pandas==2.2.2",
  "pyyaml==6.0.1"
]
requires-python = ">=3.10"
authors = [
  {name = "Kofi Baafi", email = "kbaafi@gmail.com"},
]
maintainers = [
  {name = "Kofi Baafi", email = "kbaafi@gmail.com"}
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["data", "data synthesis", "faker", "ETL", "test data"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/duapa/odsynth"
Documentation = "https://github.com/duapa/odsynth/README.md"
Repository = "https://github.com/duapa/odsynth.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["odsynth*", "odsynth.*"]
namespaces = false

[tool.black]
line-length = 88

[project.scripts]
synth = "odsynth.entry_points.synth:main"
publish = "odsynth.entry_points.publish:main"
